Correction in z-index

--- a/src/scss/_contextmenu.scss
+++ b/src/scss/_contextmenu.scss
@@ -4,6 +4,7 @@
     box-shadow: $box-shadow;
     font-family: $font;
     font-size: $font-size;
+    z-index: 9;
 
     ul {
         padding: 0;
